src/parser/snapshots/almond__parser__statement__tests__var_stmt-3.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"var x = 1, y;\".into()).unwrap().1"
---
{
  "type": "VariableDeclaration",
  "declarations": [
    {
      "type": "VariableDeclarator",
      "id": {
        "type": "Identifier",
        "name": "x",
        "start": 4,
        "end": 5
      },
      "init": {
        "type": "Literal",
        "value": 1.0,
        "start": 8,
        "end": 9
      },
      "start": 4,
      "end": 9
    },
    {
      "type": "VariableDeclarator",
      "id": {
        "type": "Identifier",
        "name": "y",
        "start": 11,
        "end": 12
      },
      "init": null,
      "start": 11,
      "end": 12
    }
  ],
  "kind": "var",
  "start": 0,
  "end": 13
}
