src/parser/snapshots/almond__parser__statement__tests__var_stmt-5.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"var x\\t\".into()).unwrap().1"
---
{
  "type": "VariableDeclaration",
  "declarations": [
    {
      "type": "VariableDeclarator",
      "id": {
        "type": "Identifier",
        "name": "x",
        "start": 4,
        "end": 5
      },
      "init": null,
      "start": 4,
      "end": 6
    }
  ],
  "kind": "var",
  "start": 0,
  "end": 5
}
