src/parser/snapshots/almond__parser__statement__tests__with_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"with (object) { expression; }\".into()).unwrap().1"
---
{
  "type": "WithStatement",
  "object": {
    "type": "Identifier",
    "name": "object",
    "start": 6,
    "end": 12
  },
  "body": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Identifier",
          "name": "expression",
          "start": 16,
          "end": 26
        },
        "start": 16,
        "end": 27
      }
    ],
    "start": 14,
    "end": 29
  },
  "start": 0,
  "end": 29
}
